# minigrad

./: .gitignore  Makefile.am  configure.ac  manifest.scm
doc/: minigrad.texi  version.texi
minigrad/: dot.scm  graph.scm  libgv.scm  operation.scm  value.scm
